fix metric border overlap

--- a/css/_sass/stats.scss
+++ b/css/_sass/stats.scss
@@ -118,7 +118,6 @@ $stats-label-vadjust: 0.4;
       margin: 2em 0;
     }
     .metric {
-      float: left;
       width: auto;
     }
   }
